usr.sbin/autofs/automount.c
@@ -80,6 +80,8 @@ unmount_by_statfs(const struct statfs *sb, bool force)
 	free(fsid_str);
 	if (error != 0)
 		log_warn("cannot unmount %s", sb->f_mntonname);
+	else
+		rpc_umntall();
 
 	return (error);
 }
